# mfa

./: AGENTS.md  CMakeLists.txt  COPYING  Doxyfile  Makefile  README.md  peru.yaml  repo.yaml  test.py
draw/: README.md  binding.gyp  draw.cc  draw.js  gui.js  index.html  node-client.js  nwjs-client.js  package.json  server.js
draw/make/: make-node  make-nwjs
examples/: CMakeLists.txt  block.hpp  domain_args.hpp  example-setup.hpp  example_signals.hpp  nasa_block.hpp  parser.hpp  rayblock.hpp  types.h
examples/1d/: 1d.cpp  CMakeLists.txt  block.hpp
examples/adaptive/: CMakeLists.txt  adaptive.cpp  block.hpp  hep_adaptive.cpp
examples/convert/: CMakeLists.txt  write_vtk.cpp  write_vtk_multiblock.cpp  write_vtk_test_data.cpp  writer.cpp
examples/differentiate/: CMakeLists.txt  differentiate.cpp
examples/encode/: CMakeLists.txt  multiblock_blend_continuous.cpp
examples/encode/analytical/: CMakeLists.txt  analytical.cpp  analytical_multiblock.cpp  analytical_multiblock_blend.cpp
examples/encode/grid/: CMakeLists.txt  grid_multiblock_blend.cpp  gridded_2d.cpp  gridded_3d.cpp
examples/encode/timeseries/: CMakeLists.txt  time_varying.cpp
examples/eval/: CMakeLists.txt  decode_speed.cpp  differentiate_block.cpp  encode_speed.cpp  eval.cpp  integrate.cpp  line_integral.cpp
examples/fixed/: .CMakeLists.txt.swp  .CMakeLists.txt.un~  .adaptive.cpp.swo  .adaptive.cpp.swp  .adaptive.cpp.un~  .block.hpp.swp  .block.hpp.un~  CMakeLists.txt  analytical.cpp  fixed-multivar.cpp  fixed.cpp  fixed_multiblock.cpp  fixed_multiblock_ghost.cpp  fixed_multivariate.cpp  gridded_3d.cpp  hep_fixed.cpp  multiblock_blend_continuous.cpp  multiblock_blend_discrete.cpp  multiblock_noblend_continuous.cpp  nasa-vis.cpp  time_varying.cpp
examples/misc/: nasa-vis.cpp
examples/n-d/: CMakeLists.txt  block.hpp  test.cpp
examples/nd/: CMakeLists.txt  adaptive.cpp  block.hpp  fixed.cpp  nd.cpp
examples/nonlinear/: .CMakeLists.txt.swp  .CMakeLists.txt.un~  .nonlinear.cpp.swp  .nonlinear.cpp.un~  CMakeLists.txt  nonlinear.cpp
examples/old/: CMakeLists.txt  adaptive.cpp  fixed.cpp
examples/simple/: 1d.cpp  CMakeLists.txt  block.hpp  old.1d.cpp
examples/tspline/: CMakeLists.txt  tmesh-test.cpp
examples/unstructured_multiblock/: CMakeLists.txt  nasa-vis.cpp
examples/vol_iterator/: CMakeLists.txt  vol_iterator.cpp
include/diy/include/diy/mpi/: config.hpp
include/eigen3/: .gitignore
include/mfa/: block_base.hpp  data_model.hpp  decode.hpp  encode.hpp  example-setup.hpp  input.hpp  mfa.h  mfa.hpp  mfa_data.hpp  new_knots.hpp  nl_encode.hpp  overlays.hpp  param.hpp  parameterization.hpp  pointset.hpp  pt.hpp  ray_encode.hpp  tmesh.hpp  types.hpp  util.hpp
include/mfa/utilities/: geom.hpp  grid.hpp  iterator.hpp  logging.hpp  stats.hpp  util.hpp
include/pybind11/tests/: test_iostream.py
python/: CMakeLists-new.txt  CMakeLists.txt  FindMPI4Py.cmake  block.cpp  block_base.cpp  mfa.cpp
python/examples/: CMakeLists.txt  README-practical-ct.md  debug.py  evaluate.py  fixed.py  practical_ct_pipeline.py  requirements-practical-ct.txt  test.py
python/mfa/: __init__.py
python/src/: block.cpp  mfa.cpp  mpi-capsule.h  mpi-comm.h
python/tests/: test_bindings_api.py
src/: CMakeLists.txt  decode.cpp  decode_templates.cpp  encode.cpp  encode_templates.cpp  mfa.cpp  mfa_templates.cpp  new_knots.cpp  new_knots_templates.cpp  nl_encode.cpp  nl_encode_templates.cpp
tests/: CMakeLists.txt  adaptive.cpp  decode_grid.cpp  derivative_model.cpp  differentiate.cpp  fixed.cpp  fixed_multiblock.cpp  integrate.cpp  multi_bc.cpp  s3d_blend_test.cpp  write_vtk.cpp  write_vtk_multiblock.cpp
